<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/tvSymptomsDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptoms_date" />

            <EditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:text="@string/date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSymptoms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptoms" />

            <CheckBox
                android:id="@+id/cbFever"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/fever" />

            <CheckBox
                android:id="@+id/cbCough"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/cough" />

            <CheckBox
                android:id="@+id/cbBreath"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/breath_shortness" />

            <CheckBox
                android:id="@+id/cbFatigue"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/fatigue" />

            <CheckBox
                android:id="@+id/cbAches"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/body_aches" />

            <CheckBox
                android:id="@+id/cbHeadache"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/headache" />

            <CheckBox
                android:id="@+id/cbLossSmell"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/loss_smell" />

            <CheckBox
                android:id="@+id/cbSoreThroat"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/sore_throat" />

            <CheckBox
                android:id="@+id/cbCongestion"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/congestion" />

            <CheckBox
                android:id="@+id/cbNausea"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/nausea" />

            <CheckBox
                android:id="@+id/cbDiarrhea"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/diarrhea" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact" />

            <RadioGroup
                android:id="@+id/rgContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbYes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sí" />

                <RadioButton
                    android:id="@+id/rbNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="No" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvMunicipality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/municipality" />

            <EditText
                android:id="@+id/etMunicipality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Municipio" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/bAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accept" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>